Edit input type to email

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section>
             <h2>Wanna be a dev?</h2>
             <form action="http://example.com/submit">
-                <input type="text" name="email" placeholder="Email" required>
+                <input type="email" name="email" placeholder="Email" required>
                 <fieldset>
                     <legend>Level</legend>
                     <label><input checked type="radio" id="basic" name="level" value="basic"> Basic</label>
