--- a/index.html
+++ b/index.html
@@ -4,39 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitTest - The Basic of Web development</title>
+    <link href="https://fonts.googleapis.com/css?family=Inter" rel="stylesheet" type="text/css">
+    <style>
+        .paragraph {
+            font-family: Inter, Helvetica, Arial, sans-serif;
+            font-size: 20px;
+            color: blue;
+        }
+        .logo-image {
+            width: 100px;
+            height: auto;
+        }
+
+        .thin-black-border {
+            border-color: black;
+            border-width: 5px;
+            border-style: solid;
+            border-radius: 10px;
+        }
+
+        .silver-bg {
+            background-color: silver;
+        }
+
+        #dev-form {
+            background-color: greenyellow;
+        }
+    </style>
 </head>
+
 <body>
     <main>
         <h1>GitTest</h1>
         <section>
             <h2>Hello World!</h2>
-            <p>Click <a href="https://www.google.com" target="_blank">here</a> to access Google</p>
+            <p class="paragraph">Click <a href="https://www.google.com" target="_blank">here</a> to access Google</p>
+            <p>Click <a href="#footer">here</a> to go to footer</p>
             <img width="500px" src="https://4.bp.blogspot.com/-dPBsZCgc9-o/XVS3Swg2E6I/AAAAAAAABD0/auWvVjsu-ks1FXLrIohWEGnKswQGnIjeQCLcBGAs/s1600/developer-on-computer.jpg" alt="A man sitting in front of the monitor and developing web application.">
         </section>
         <section>
             <h2>How To Become a Web developer?</h2>
-            <h3>Useful Sites</h3>
-            <ul>
-                <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
-                <li><a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a></li>
-            </ul>
-            <figure>
-                <img width="100px" src="https://clipground.com/images/freecodecamp-logo-6.jpg" alt="The logo of freeCodeCamp">
-                <figcaption>freeCodeCamp is totally <em>free</em>.</figcaption>
-            </figure>
-            <h3>Useful Documents</h3>
-            <ol>
-                <li><a href="https://www.w3schools.com/" target="_blank">w3schools</a></li>
-                <li><a href="https://devdocs.io/" target="_blank">DevDocs</a></li>   
-            </ol>
-            <figure>
-                <img width="100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/W3Schools_logo.svg/1920px-W3Schools_logo.svg.png" alt="The logo of w3schools">
-                <figcaption>w3schools covers almost <strong>everything</strong>.</figcaption>
-            </figure>
+            <div class="silver-bg">
+                <h3>Useful Sites</h3>
+                <ul>
+                    <li><a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a></li>
+                    <li><a href="https://www.theodinproject.com/" target="_blank">The Odin Project</a></li>
+                </ul>
+                <figure>
+                    <img class="logo-image thin-black-border" src="https://clipground.com/images/freecodecamp-logo-6.jpg" alt="The logo of freeCodeCamp">
+                    <figcaption>freeCodeCamp is totally <em>free</em>.</figcaption>
+                </figure>
+                <h3>Useful Documents</h3>
+                <ol>
+                    <li><a href="https://www.w3schools.com/" target="_blank">w3schools</a></li>
+                    <li><a href="https://devdocs.io/" target="_blank">DevDocs</a></li>   
+                </ol>
+                <figure>
+                    <img class="logo-image thin-black-border" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a0/W3Schools_logo.svg/1920px-W3Schools_logo.svg.png" alt="The logo of w3schools">
+                    <figcaption>w3schools covers almost <strong>everything</strong>.</figcaption>
+                </figure>
+            </div>
+            
         </section>
         <section>
             <h2>Wanna be a dev?</h2>
-            <form action="http://example.com/submit">
+            <form action="http://example.com/submit" id="dev-form">
                 <input type="email" name="email" placeholder="Email" required>
                 <fieldset>
                     <legend>Level</legend>
@@ -46,16 +78,16 @@
                 </fieldset>
                 <fieldset>
                     <legend>Languages</legend>
-                    <input checked type="checkbox" id="javascript" value="javascript" name="languages"> <label for="javascript">JavaScript</label> 
-                    <input type="checkbox" id="python" value="python" name="languages"> <label for="python">Python</label> 
-                    <input type="checkbox" id="c++" value="c++" name="languages"> <label for="c++">C++</label> 
+                    <label for="javascript"><input checked type="checkbox" id="javascript" value="javascript" name="languages"> JavaScript</label> 
+                    <label for="python"><input type="checkbox" id="python" value="python" name="languages"> Python</label> 
+                    <label for="c++"><input type="checkbox" id="c++" value="c++" name="languages"> C++</label> 
                 </fieldset>
                 <button type="submit">Submit</button>
 
             </form>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <p>No Copyright - <a href="https://reikavik.github.io">Reikavik</a></p>
 
     </footer>
