Add local image file

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!--Inheritance-->
             <p>Click <a href="#become-a-web-dev">here</a> to become a web developer</p>
             <p>Click <a href="#footer">here</a> to go to footer</p>
-            <img width="500px" src="https://4.bp.blogspot.com/-dPBsZCgc9-o/XVS3Swg2E6I/AAAAAAAABD0/auWvVjsu-ks1FXLrIohWEGnKswQGnIjeQCLcBGAs/s1600/developer-on-computer.jpg" alt="A man sitting in front of the monitor and developing web application.">
+            <img width="500px" src="./img/coding.jpg">
         </section>
         <section>
             <p class="lorem-ipsum">Lorem ipsum <strong>sit amet</strong> , consectetur <s>adi piscing elit</s>, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
